--- a/oportunidades.html
+++ b/oportunidades.html
@@ -9,9 +9,13 @@
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 </head>
 <body>
+    
     <header>
+        <nav>
+            <p>Menu</p>
+        </nav>
         <a href="index.html" rel="prev" target="_self">
-            <h1>Transverso</h1>
+            <h1><span id="logo1">Trans</span><span id="logo2">verso</span></h1>
         </a>
     </header>
 
