--- a/_forum.html
+++ b/_forum.html
@@ -9,11 +9,17 @@
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 </head>
 <body>
+
     <header>
+        <nav>
+            <p>Menu</p>
+        </nav>
+        
         <a href="index.html" rel="prev" target="_self">
-            <h1>Transverso</h1>
+            <h1><span id="logo1">Trans</span><span id="logo2">verso</span></h1>
         </a>
     </header>
+
 <main>
     
     <form action="duvida">
