--- a/criarconta.html
+++ b/criarconta.html
@@ -8,9 +8,13 @@
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 </head>
 <body>
+
     <header>
-        <h1>TRANSVERSO</h1> 
+        <a href="index.html" rel="prev" target="_self">
+            <h1><span id="logo1">Trans</span><span id="logo2">verso</span></h1>
+        </a>
     </header>
+
     <main>
         <form action="criarconta">
             <h2>Junte-se ao Transverso!</h2>
