--- a/retificacao.html
+++ b/retificacao.html
@@ -8,11 +8,16 @@
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 </head>
 <body>
+
     <header>
-            <a href="index.html" rel="prev" target="_self">
-                <h1>TRANSVERSO</h1> 
-            </a>
+        <nav>
+            <p>Menu</p>
+        </nav>
+        <a href="index.html" rel="prev" target="_self">
+            <h1><span id="logo1">Trans</span><span id="logo2">verso</span></h1>
+        </a>
     </header>
+    
  <main>
     <h2>Nome social <br>
         X <br>
