--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </nav>
 
         <a href="index.html" rel="prev" target="_self">
-            <h1>Transversoooooooo</h1>
+            <h1>Transverso</h1>
             <h1><span id="logo1">Trans</span><span id="logo2">verso</span></h1>
         </a>
     </header>
