--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <header>
         <nav>
-            <p>Hoje é Terça</p>
+            <p>Menu</p>
         </nav>
 
         <a href="index.html" rel="prev" target="_self">
