aplicaçao da img do menu/notifi

--- a/documentos.html
+++ b/documentos.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <img id="menu" src="img/menu.png" alt="MENU">
+            <img id="sino" src="img/sino.png" alt="NOTIFICAÇÕES">
+        </nav>
+        <a href="index.html" rel="prev" target="_self">
+            <h1><span id="logo1">Trans</span><span id="logo2">verso</span></h1>
+        </a>
+    </header>
+
     <div class="doc">
      <a href="">Documentos pessoais</a><input type="checkbox" name="check1" id="check1">
         <p>Certidão de nascimento <input type="checkbox" name="check" id="check"></p> 
