--- a/guiaretificacao.html
+++ b/guiaretificacao.html
@@ -11,7 +11,8 @@
   
     <header>
         <nav>
-            <p>Menu</p>
+            <img id="menu" src="img/menu.png" alt="MENU">
+            <img id="sino" src="img/sino.png" alt="NOTIFICAÇÕES">
         </nav>
         <a href="index.html" rel="prev" target="_self">
             <h1><span id="logo1">Trans</span><span id="logo2">verso</span></h1>
