--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
 
     <header>
         <nav>
-            <p>Menu</p>
+            <img id="menu" src="img/menu.png" alt="MENU">
+            <img id="sino" src="img/sino.png" alt="NOTIFICAÇÕES">
         </nav>
-
         <a href="index.html" rel="prev" target="_self">
-            <h1>Transverso</h1>
             <h1><span id="logo1">Trans</span><span id="logo2">verso</span></h1>
         </a>
     </header>
