--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <main>
         <div id="img">
-            <p>Aqui vai uma imagem ou algo parecido</p>
+            <img src="img/t_flag.png" alt="Bandeira Orgulho Trans">
         </div>
 
         <div class="op_menu">
