--- a/criarconta.html
+++ b/criarconta.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TRANSVERSO - Criar Contat</title>
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-
     <header>
         <a href="index.html" rel="prev" target="_self">
             <h1><span id="logo1">Trans</span><span id="logo2">verso</span></h1>
@@ -16,21 +16,20 @@
     </header>
 
     <main>
-        <form action="criarconta">
-            <h2>Junte-se ao Transverso!</h2>
-            <p>Preencha os dados abaixo:</p>
-            <input type="text" placeholder="Nome"><br>
-            <input type="text" placeholder="Sobrenome"><br>
-            <input type="text" placeholder="E-mail"><br>
-            <input type="text" placeholder="Senha"><br>
-            <input type="text" placeholder="Confirme sua senha"><br>
-            <input type="button" value="Criar conta"><br>
-            <a href="index.html">
-                <p>Continuar sem login</p>
-            </a>
-            <p>Já possui conta? <a href="login.html" rel="prev" target="_self">Fazer login</a></p>
+        <h2>Junte-se ao Transverso!</h2>
+        <p>Preencha os dados abaixo:</p>
+        <form  action="criarconta">
+        <input type="text" placeholder="Nome"><br>
+        <input type="text" placeholder="Sobrenome"><br>
+        <input type="text" placeholder="E-mail"><br>
+        <input type="text" placeholder="Senha"><br>
+        <input type="text" placeholder="Confirme sua senha"><br>
+        <input type="button" value="Criar conta"><br>
+        <a href="index.html">
+            <p>Continuar sem login</p>
+        </a>
+        <p>Já possui conta? <a href="login.html" rel="prev" target="_self">Fazer login</a></p>
         </form>
     </main>
-    
 </body>
 </html>
