--- a/login.html
+++ b/login.html
@@ -14,17 +14,18 @@
             <h1><span id="logo1">Trans</span><span id="logo2">verso</span></h1>
         </a>
     </header>
-
-    <h2>Bem-vinde</h2>
-    <p>Faça login para continuar</p>
-    <form action="">
-        <input type="text" placeholder="Usuário"></br>
-        <input type="text" placeholder="Senha"></br>
-        <p>Não possui conta? <a href="criarconta.html">Criar conta</a></p>
-        <a href="iniciar.html"><input type="button" value="Login"></a>
-        <a href="index.html" rel="netx" target="_self">
-            <p>Continuar sem login</p>
-        </a>
-    </form>
+    <main>
+        <h2>Bem-vinde</h2>
+        <p>Faça login para continuar</p>
+        <form action="login">
+            <input type="text" placeholder="Usuário"></br>
+            <input type="text" placeholder="Senha"></br>
+            <p>Não possui conta? <a href="criarconta.html">Criar conta</a></p>
+            <a href="iniciar.html"><input type="button" value="Login"></a>
+            <a href="index.html" rel="netx" target="_self">
+                <p>Continuar sem login</p>
+            </a>
+        </form>
+    </main>
 </body>
 </html>
